# mcp-oauth-proxy

./: Cargo.toml  Dockerfile  README.md  config.example.toml
.claude/: settings.json
.claude/hooks/: post-tool-use-format.sh  pre-tool-use-bash.sh
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml
chart/mcp-oauth-proxy/: Chart.yaml  values.yaml
chart/mcp-oauth-proxy/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: API-SPEC.md  ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md
src/: config.rs  lib.rs  main.rs
src/auth/: chained_oauth.rs  mod.rs  passthrough.rs
src/oauth/: codes.rs  mod.rs  pkce.rs  state.rs
src/proxy/: headers.rs  mod.rs  sse.rs
src/routes/: authorize.rs  mcp_proxy.rs  mod.rs  token.rs  well_known.rs
tests/: chained_oauth.rs  hardening.rs  mcp_proxy_test.rs  passthrough.rs
